# simd-kernels

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES  build.rs
src/: config.rs  errors.rs  lib.rs  operators.rs  utils.rs
src/kernels/: aggregate.rs  binary.rs  comparison.rs  conditional.rs  logical.rs  sort.rs  string.rs  unary.rs  vector.rs  window.rs
src/kernels/arithmetic/: dispatch.rs  mod.rs  simd.rs  std.rs  string.rs  string_ops.rs
src/kernels/bitmask/: dispatch.rs  mod.rs  simd.rs  std.rs
src/kernels/scientific/: blas_lapack.rs  erf.rs  fft.rs  matrix.rs  scalar.rs  vector.rs
src/kernels/scientific/distributions/: mod.rs  multivariate.rs
src/kernels/scientific/distributions/shared/: constants.rs  sampler.rs  scalar.rs
src/kernels/scientific/distributions/univariate/: multinomial.rs
src/kernels/scientific/distributions/univariate/beta/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/binomial/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/cauchy/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/chi_squared/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/common/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/discrete_uniform/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/exponential/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/gamma/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/geometric/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/gumbell/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/hypergeometric/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/laplace/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/logistic/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/lognormal/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/neg_binomial/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/normal/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/poisson/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/student_t/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/uniform/: mod.rs  simd.rs  std.rs
src/kernels/scientific/distributions/univariate/weibull/: mod.rs  simd.rs  std.rs
src/traits/: dense_iter.rs  to_bits.rs
tests/: common.rs  scipy_beta.rs  scipy_binomial.rs  scipy_cauchy.rs  scipy_chi2.rs  scipy_discrete_uniform.rs  scipy_exponential.rs  scipy_gamma.rs  scipy_geometric.rs  scipy_gumbel.rs  scipy_hypergeometric.rs  scipy_laplace.rs  scipy_logistic.rs  scipy_lognormal.rs  scipy_multinomial.rs  scipy_multivariate_normal.rs  scipy_mvn_condition.rs  scipy_negative_binomial.rs  scipy_normal.rs  scipy_numerical_stability.rs  scipy_param_validation.rs  scipy_poisson.rs  scipy_statistical_identities.rs  scipy_sum_to_one.rs  scipy_t.rs  scipy_weibull.rs  util.rs
