[package]
name = "simd-kernels"
description = "Lightning Fast, Arrow-Compatible Compute Kernels"
version = "0.6.0"
edition = "2024"
authors = ['Peter Bower']
license-file = "LICENSE"
keywords = [
    "simd",
    "kernels",
    "arrow",
    "polars",
    "data",
]
[dependencies]
minarrow = { version = "0.10.1", features = ["views", "vmap64"] }
num-traits = "0.2.19"
vec64 = "0.4.3"
ahash = { version = "0.8.12", optional = true }
ryu = { version = "1.0.23", optional = true }
memchr = { version = "2.8.0", optional = true }
regex = { version = "1.12.3", optional = true }
time = { version = "0.3", optional = true, features = ["parsing", "formatting", "macros", "local-offset"] }
phf = { version = "0.13.1", optional = true, features = ["macros"] }

[build-dependencies]
cc = { version = "1", optional = true }

[features]
large_string = ["minarrow/large_string"]
datetime = ["minarrow/datetime"]
datetime_ops = ["datetime", "dep:time", "dep:phf", "minarrow/datetime_ops"]
simd = ["minarrow/simd"]
extended_numeric_types = ["minarrow/extended_numeric_types"]
default_categorical_8 = ["minarrow/default_categorical_8"]
extended_categorical = ["default_categorical_8", "minarrow/extended_categorical"]
views = ["minarrow/views"]
chunked = ["minarrow/chunked"]
fast_hash = ["dep:ahash", "minarrow/fast_hash"]
str_arithmetic = ["dep:ryu", "dep:memchr", "minarrow/str_arithmetic"]
regex = ["dep:regex", "minarrow/regex"]

default = [
    "large_string",
    "simd",
    "default_categorical_8",
]
